--- a/.github/workflows/build_and_push_galactic.yml
+++ b/.github/workflows/build_and_push_galactic.yml
@@ -26,8 +26,8 @@ jobs:
 
       # create and boot a builder using by default the docker-container builder driver.
       # This is not required but recommended using it to be able to build multi-platform images, export cache, etc.
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v2
 
       - name: Build and push
         uses: docker/build-push-action@v3
