--- a/.github/workflows/build_and_push_galactic.yml
+++ b/.github/workflows/build_and_push_galactic.yml
@@ -31,5 +31,5 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v3
-        # with:
-        #   context: "{{defaultContext}}:galactic
+        with:
+          context: "{{defaultContext}}:galactic
