Fix typo in dockerfile

--- a/galactic/Dockerfile
+++ b/galactic/Dockerfile
@@ -59,7 +59,7 @@ COPY dependencies.repos /tesseract_ws/
 RUN vcs import < /tesseract_ws/dependencies.repos && \
     # Setup Argus dependencies
     cd .. && rosdep init && rosdep update && apt-get update && \
-    rosdep install --from-paths src  --ignore-src -r -y \
+    rosdep install --from-paths src  --ignore-src -r -y && \
     python3 -m pip install -U install open3d && \
     . /opt/ros/$ROSDISTRO/setup.sh && cd .. && \
     colcon build --event-handlers terminal_title- console_cohesion+ --symlink-install && \
