Update github action file to colcon build as an experiment

--- a/galactic/Dockerfile
+++ b/galactic/Dockerfile
@@ -62,6 +62,8 @@ RUN vcs import < /tesseract_ws/dependencies.repos && \
     rosdep install --from-paths src  --ignore-src -r -y \
     --skip-keys "catkin tesseract_plugins rviz" && \
     python3 -m pip install -U install open3d && . /opt/ros/$ROSDISTRO/setup.sh && cd .. && \
+    echo "\n\n\n\n About to build\n\n\n\n\n" && \
+    colcon buil && \
     # colcon build --event-handlers terminal_title- console_cohesion+ --symlink-install && \
     rm -rf build log src
 
