--- a/galactic/Dockerfile
+++ b/galactic/Dockerfile
@@ -63,7 +63,7 @@ RUN vcs import < /tesseract_ws/dependencies.repos && \
     --skip-keys "catkin tesseract_plugins rviz" && \
     python3 -m pip install -U install open3d && . /opt/ros/$ROSDISTRO/setup.sh && cd .. && \
     echo "\n\n\n\n About to build\n\n\n\n\n" && \
-    colcon buil && \
+    colcon build && \
     # colcon build --event-handlers terminal_title- console_cohesion+ --symlink-install && \
     rm -rf build log src
 
