Build from correct ws folder in docker

--- a/galactic/Dockerfile
+++ b/galactic/Dockerfile
@@ -61,7 +61,7 @@ RUN vcs import < /tesseract_ws/dependencies.repos && \
     cd .. && apt-get update &&\
     rosdep install --from-paths src  --ignore-src -r -y \
     --skip-keys "catkin tesseract_plugins rviz" && \
-    python3 -m pip install -U install open3d && . /opt/ros/$ROSDISTRO/setup.sh && cd .. && \
+    python3 -m pip install -U install open3d && . /opt/ros/$ROSDISTRO/setup.sh && \
     echo "\n\n\n\n About to build\n\n\n\n\n" && \
     colcon build && \
     # colcon build --event-handlers terminal_title- console_cohesion+ --symlink-install && \
