Push built img to github package

--- a/.github/workflows/build_and_push_galactic.yml
+++ b/.github/workflows/build_and_push_galactic.yml
@@ -33,3 +33,5 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: galactic
+          push: true
+          tags: tesseract:galactic
