Rm extra git folders to reduce container space

--- a/.github/workflows/build_and_push_galactic.yml
+++ b/.github/workflows/build_and_push_galactic.yml
@@ -34,4 +34,4 @@ jobs:
         with:
           context: galactic
           push: true
-          tags: tesseract:galactic
+          tags: srsidd/tesseract:galactic
