Fix typo in dockerfile

--- a/galactic/Dockerfile
+++ b/galactic/Dockerfile
@@ -60,7 +60,7 @@ RUN vcs import < /tesseract_ws/dependencies.repos && \
     # Setup Argus dependencies
     cd .. && apt-get update &&\
     rm -rf /tesseract_ws/src/tesseract/.git /tesseract_ws/src/tesseract_planning/.git \
-    /tesseract_ws/src/src/gl_depth_sim/.git && /tesseract_ws/src/tesseract_ros2/.git \
+    /tesseract_ws/src/src/gl_depth_sim/.git /tesseract_ws/src/tesseract_ros2/.git \
     rosdep install --from-paths src  --ignore-src -r -y \
     --skip-keys "catkin tesseract_plugins rviz" && \
     python3 -m pip install -U install open3d && . /opt/ros/$ROSDISTRO/setup.sh && \
