Use correct format for docker img tag

--- a/.github/workflows/build_and_push_galactic.yml
+++ b/.github/workflows/build_and_push_galactic.yml
@@ -41,5 +41,6 @@ jobs:
           context: galactic
           push: true
           # tags: srsidd/tesseract:galactic
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          # tags: ${{ steps.meta.outputs.tags }}
+          tags: ghcr.io/${{ github.repository_owner }}/tesseract:galactic
+          # labels: ${{ steps.meta.outputs.labels }}
