add pcl conversions to rosdep

--- a/galactic/Dockerfile
+++ b/galactic/Dockerfile
@@ -1,5 +1,5 @@
 # -*- coding: UTF-8 -*-
-# Dockerfile to create a base image required to run the argus mvp
+# Dockerfile to create a base image required to run tesseract
 # Author: Siddharth Srivatsa <srivaatsasiddharth@gmail.com>
 
 # Build command
@@ -51,7 +51,7 @@ COPY dependencies.repos /tesseract_ws/
 RUN vcs import < /tesseract_ws/dependencies.repos && \
     # Setup Argus dependencies
     cd .. && apt-get update && \
-    apt-get install -y --no-install-recommends ros-galactic-octomap ros-galactic-octomap-msgs && \
+    apt-get install -y --no-install-recommends ros-galactic-octomap ros-galactic-octomap-msgs ros-galactic-pcl-conversions && \
     rosdep install --from-paths src  --ignore-src -r -y \
     --skip-keys "catkin tesseract_plugins rviz plugin_loader rosidl_default_generators ament_cmake ament_lint_common pluginlib octomap ament_cmake_gtest ament_lint_common ros_testing tf2_eigen" && \
     python3 -m pip install -U install open3d && . /opt/ros/$ROSDISTRO/setup.sh && \
