--- a/galactic/Dockerfile
+++ b/galactic/Dockerfile
@@ -53,8 +53,8 @@ COPY dependencies.repos /tesseract_ws/
 RUN vcs import < /tesseract_ws/dependencies.repos && \
     # Setup Argus dependencies
     cd .. && apt-get update && \
-    apt-get install -y --no-install-recommends ros-galactic-octomap ros-galactic-octomap-msgs ros-galactic-pcl-conversions liborocos-kdl-dev ros-galactic-tf2 ros-galactic-tf2-ros ros-galactic-tf2-eigen && \
-    rosdep install --from-paths src  --ignore-src -r -y \
+    apt-get install -y --no-install-recommends ros-galactic-octomap ros-galactic-octomap-msgs ros-galactic-pcl-conversions liborocos-kdl-dev && \
+    rosdep install --from-paths src  --ignore-src -r -y --rosdistro=$ROSDISTRO\
     --skip-keys "catkin tesseract_plugins rviz plugin_loader rosidl_default_generators ament_cmake ament_lint_common pluginlib octomap ament_cmake_gtest ament_lint_common ros_testing tf2_eigen" && \
     python3 -m pip install -U install open3d && . /opt/ros/$ROSDISTRO/setup.sh && \
     colcon build --cmake-args -DCMAKE_BUILD_TYPE=Release --event-handlers terminal_title- console_cohesion+ && \
