Manually install interactive markers

--- a/galactic/Dockerfile
+++ b/galactic/Dockerfile
@@ -54,7 +54,7 @@ RUN vcs import < /tesseract_ws/dependencies.repos && \
     cd .. && apt-get update && \
     apt-get install -y software-properties-common && \
     add-apt-repository ppa:ros-industrial/ppa -y && \
-    apt-get install -y --no-install-recommends taskflow ros-galactic-octomap ros-galactic-octomap-msgs ros-galactic-pcl-conversions liborocos-kdl-dev ros-galactic-tf2 ros-galactic-tf2-ros ros-galactic-tf2-eigen ros-galactic-urdf ros-galactic-cv-bridge ros-galactic-rviz-common && \
+    apt-get install -y --no-install-recommends taskflow ros-galactic-interactive_markers ros-galactic-octomap ros-galactic-octomap-msgs ros-galactic-pcl-conversions liborocos-kdl-dev ros-galactic-tf2 ros-galactic-tf2-ros ros-galactic-tf2-eigen ros-galactic-urdf ros-galactic-cv-bridge ros-galactic-rviz-common && \
     rosdep install --from-paths src  --ignore-src -r -y \
     --skip-keys "catkin tesseract_plugins rviz plugin_loader rosidl_default_generators ament_cmake ament_lint_common pluginlib octomap ament_cmake_gtest ament_lint_common ros_testing tf2_eigen" && \
     python3 -m pip install -U install open3d && . /opt/ros/$ROSDISTRO/setup.sh && \
