Add qt53d core and open3D dependencies

--- a/humble/Dockerfile
+++ b/humble/Dockerfile
@@ -53,7 +53,7 @@ COPY dependencies.repos /tesseract_ws/
 RUN vcs import < /tesseract_ws/dependencies.repos && \
     # Setup Argus dependencies
     cd .. && apt-get update && \
-    apt-get install -y software-properties-common libccd-dev libboost-filesystem-dev libboost-system-dev libboost-serialization-dev ros-humble-octomap ros-humble-tf2-eigen coinor-libipopt-dev && \
+    apt-get install -y software-properties-common qt3d5-dev libccd-dev libboost-filesystem-dev libboost-system-dev libboost-serialization-dev ros-humble-octomap ros-humble-tf2-eigen coinor-libipopt-dev && \
     add-apt-repository ppa:ros-industrial/ppa -y && \
     python3 -m pip install -U install open3d transforms3d && \
     rosdep install --from-paths src  --ignore-src -r -y \
@@ -61,6 +61,11 @@ RUN vcs import < /tesseract_ws/dependencies.repos && \
     . /opt/ros/$ROSDISTRO/setup.sh && \
     colcon build --cmake-args -DCMAKE_BUILD_TYPE=Release -DTESSERACT_BUILD_FCL=OFF -DBUILD_RENDERING=OFF -DBUILD_STUDIO=OFF  --event-handlers terminal_title- console_cohesion+ && \
     rm -rf build log src
+
+RUN cd ~ && git clone --depth 1 --branch v0.17.0 --recursive https://github.com/intel-isl/Open3D.git && /bin/bash ~/Open3D/util/install_deps_ubuntu.sh assume-yes && cd ~/Open3D && mkdir build && cd build && \
+# Specify install directory to be same as install dir of your workspace
+    cmake -DBUILD_SHARED_LIBS=ON -DGLIBCXX_USE_CXX11_ABI=ON -DCMAKE_BUILD_TYPE=Release .. && \
+    make install && rm -rf ~/Open3D
 
 ADD entrypoint.sh /entrypoint.sh
 ENTRYPOINT [ "/entrypoint.sh" ]
