Fix typo to rm repeated word in docker file

--- a/humble/Dockerfile
+++ b/humble/Dockerfile
@@ -55,7 +55,7 @@ RUN vcs import < /tesseract_ws/dependencies.repos && \
     cd .. && apt-get update && \
     apt-get install -y software-properties-common qt3d5-dev libccd-dev libboost-filesystem-dev libboost-system-dev libboost-serialization-dev ros-humble-octomap ros-humble-tf2-eigen coinor-libipopt-dev && \
     add-apt-repository ppa:ros-industrial/ppa -y && \
-    python3 -m pip install -U install open3d transforms3d && \
+    python3 -m pip install open3d transforms3d && \
     rosdep install --from-paths src  --ignore-src -r -y \
     --skip-keys "catkin tesseract_plugins libvtk rviz plugin_loader rosidl_default_generators ament_cmake ament_lint_common pluginlib octomap ament_cmake_gtest ament_lint_common ros_testing tf2_eigen" && \
     . /opt/ros/$ROSDISTRO/setup.sh && \
@@ -63,7 +63,7 @@ RUN vcs import < /tesseract_ws/dependencies.repos && \
     rm -rf build log src
 
 RUN cd ~ && git clone --depth 1 --branch v0.17.0 --recursive https://github.com/intel-isl/Open3D.git && /bin/bash ~/Open3D/util/install_deps_ubuntu.sh assume-yes && cd ~/Open3D && mkdir build && cd build && \
-# Specify install directory to be same as install dir of your workspace
+    # Specify install directory to be same as install dir of your workspace
     cmake -DBUILD_SHARED_LIBS=ON -DGLIBCXX_USE_CXX11_ABI=ON -DCMAKE_BUILD_TYPE=Release .. && \
     make install && rm -rf ~/Open3D
 
